# fal-mcp-server

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL_MANUAL.md  Makefile  README.md  claude_desktop_config.json  examples.py  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_server.py
